[gd_scene load_steps=7 format=3 uid="uid://drl4p4hp5nmcx"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_b65qk"]
[ext_resource type="PackedScene" uid="uid://b5qf21tf7jh4k" path="res://scenes/brake_lever/brake_lever.tscn" id="2_1n3ws"]
[ext_resource type="FontFile" uid="uid://djul0f5fy0t1w" path="res://common/FatPix-SVG.ttf" id="3_7yb1y"]
[ext_resource type="Texture2D" uid="uid://bl2obagjvq4ux" path="res://common/white_square.png" id="4_dumtc"]

[sub_resource type="Theme" id="Theme_ftwr0"]
default_font = ExtResource("3_7yb1y")
default_font_size = 45

[sub_resource type="NavigationPolygon" id="NavigationPolygon_cv5rf"]
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 8.0

[node name="Level" type="Node2D"]
script = ExtResource("1_b65qk")
metadata/_edit_lock_ = true
metadata/_edit_vertical_guides_ = [4672.0]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="BrakeLever" parent="UI" instance=ExtResource("2_1n3ws")]
position = Vector2(32, 608)

[node name="ScoreLabel" type="Label" parent="UI"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
theme = SubResource("Theme_ftwr0")
text = "0"

[node name="TimeLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
text = "0.0"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
texture_filter = 1
navigation_polygon = SubResource("NavigationPolygon_cv5rf")
use_edge_connections = false

[node name="ScreenBank" type="Node2D" parent="."]

[node name="Train" type="Node2D" parent="."]
y_sort_enabled = true
metadata/_edit_lock_ = true

[node name="Point" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 5
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_dumtc")
